# network-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  release.sh
.github/workflows/: release.yml
src/: autostart.rs  geo.rs  icons.rs  main.rs  network.rs  tray.rs  updater.rs
