[package]
name = "network-monitor"
version = "0.1.3"
edition = "2021"
description = "System tray app displaying country flag based on network location"
license = "MIT"
authors = ["TruongBui"]

[dependencies]
ksni = "=0.3.0"
tokio = { version = "=1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "=0.12.23", default-features = false, features = ["json", "rustls-tls"] }
zbus = { version = "=5.12.0", default-features = false, features = ["tokio"] }
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.17"
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
image = { version = "=0.25.6", default-features = false, features = ["png"] }
dirs = "=6.0.0"
futures-util = "=0.3.31"
notify-rust = "=4.11.7"

[build-dependencies]
resvg = "=0.45.1"
reqwest = { version = "=0.12.23", features = ["blocking", "rustls-tls"], default-features = false }
zip = "=6.0.0"
